--- a/Blogpost.html
+++ b/Blogpost.html
@@ -16,9 +16,9 @@
         <div class="nav-left linka">
             <a href="index.html">BlogVerse</a>
             <ul>
-                <li><a href="BlogVerse.github.io/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="/">About</a></li>
-                <li><a href="BlogVerse.github.io/contact.html">Contact us</a></li>
+                <li><a href="contact.html">Contact us</a></li>
             </ul>
         </div>
         <div class="nav-right">
