--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="img/online-article-concept-illustration_114360-5321.avif " height="250px">
             </div>
             <div class="home-article-content ">
-                <a href="/Blogpost.html" class="linka"><h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3></a>
+                <a href="/blogpost.html" class="linka"><h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3></a>
                 <span>Author name</span><br>
                 <span>Date | Time required to read</span>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta consequuntur dolorum, ut in accusamus
@@ -72,7 +72,7 @@
                     height="250px">
             </div>
             <div class="home-article-content ">
-                <a href="/Blogpost.html" class="linka"><h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3></a>
+                <a href="/blogpost.html" class="linka"><h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3></a>
                 <span>Author name</span><br>
                 <span>Date | Time required to read</span>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta consequuntur dolorum, ut in accusamus
@@ -86,7 +86,7 @@
                     height="250px">
             </div>
             <div class="home-article-content ">
-                <a href="/Blogpost.html" class="linka"><h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3></a>
+                <a href="/blogpost.html" class="linka"><h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3></a>
                 <span>Author name</span><br>
                 <span>Date | Time required to read</span>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta consequuntur dolorum, ut in accusamus
@@ -100,7 +100,7 @@
                     height="250px">
             </div>
             <div class="home-article-content ">
-                <a href="/Blogpost.html" class="linka"><h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3></a>
+                <a href="/blogpost.html" class="linka"><h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3></a>
                 <span>Author name</span><br>
                 <span>Date | Time required to read</span>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta consequuntur dolorum, ut in accusamus
